--- a/src/components/Public/Issues/styles.css
+++ b/src/components/Public/Issues/styles.css
@@ -201,16 +201,21 @@
         display: none;
     }
 
+    .issues .issue-text {
+        height: auto;
+    }
+
     .issues.mobile-issues {
         background-image: none !important;
         background-color: #C04C9C;
         display: block;
         height: 345px;
         padding: 35px 0;
+        padding-bottom: 0;
     }
 
     .issues .issue-carousel {
-        width: 6000px;
+        width: 12000px;
     }
 
     .issues .issue-carousel.swipe-left {
@@ -230,6 +235,8 @@
         margin: 0 94px 0 0;
         position: relative;
         text-align: center;
+        width: 768px;
+        overflow: hidden;
     }
 
     .issues .issue-carousel > div .issue {
@@ -258,7 +265,7 @@
 
     .issues .issue-text {
         display: block;
-        margin-bottom: 15px;
+        margin-bottom: 0;
         color: #fff;
         font-weight: 300;
         z-index: 999;
@@ -300,8 +307,9 @@
     }
 
     .issues .text-wrapper .heading {
-       font-size: 25px;
+       font-size: 30px;
         margin: 0 0 10px 0;
+        text-align: center;
     }
 
     .issues .issue-wrapper .violence {
@@ -405,7 +413,8 @@
         box-sizing: border-box;
         width: 100%;
         margin-top: 20px;
-        margin-bottom: 10px;
+        margin-bottom: 35px;
+        border-radius: 5px;
     }
 
     .issues .issue-arrow-left {
@@ -419,7 +428,9 @@
         margin-top: 10px;
         cursor: pointer;
         top: 107px;
-        left: 41px;
+        left: -210px;
+        right: 0;
+        margin: auto;
     }
 
     .issues .issue-arrow-right {
@@ -434,7 +445,9 @@
         margin-top: 10px;
         cursor: pointer;
         top: 107px;
-        right: 41px;
+        left: 0;
+        right: -210px;
+        margin: auto;
     }
 
     .issues + .text-wrapper {
