--- a/src/components/Public/Blog/styles.css
+++ b/src/components/Public/Blog/styles.css
@@ -42,6 +42,37 @@
     color: #C04C9C;
 }
 
+@media only screen and (max-width: 768px) {
+    .blog .blog-list {
+        padding: 0 40px;
+    }
+
+    .blog .page-header {
+        background-color: #C04C9C;
+        position: static;
+        display: block;
+        text-align: center;
+        padding-left: 0;
+        margin-top: 200px;
+    }
+
+    .blog .page-header {
+        background-color: #fff;
+        position: static;
+        display: block;
+        text-align: center;
+        padding-left: 0;
+        margin-top: 250px;
+        color: #C04C9C;
+    }
+
+    .blog .page-header h1 {
+        color: #C04C9C;
+        padding: 7px 0;
+        margin: 8px 0 0 0;
+    }
+}
+
 @media only screen and (max-width: 500px) {
     .blog .page-header {
         background-color: #fff;
