--- a/src/components/Public/HowItWorks/styles.css
+++ b/src/components/Public/HowItWorks/styles.css
@@ -110,6 +110,43 @@
 }
 
 
+@media only screen and (max-width: 768px) {
+    .how-it-works {
+        padding: 25px 30px;
+        text-align: center;
+    }
+
+    .how-it-works .heading {
+        font-size: 30px;
+    }
+
+    .how-it-works .step-wrapper:first-child {
+        padding-left: 0 !important;
+    }
+
+    .how-it-works .step-wrapper:last-child {
+        padding-right: 0 !important;
+        padding: 0 20px 0 25px;
+    }
+
+    .how-it-works .preamble {
+        width: 100%;
+    }
+
+    .how-it-works .row-1 {
+        margin-top: 30px;
+    }
+
+    .how-it-works .step-wrapper {
+        display: inline-block;
+        width: 49%;
+        margin-bottom: 35px;
+        box-sizing: border-box;
+        vertical-align: top;
+    }
+}
+
+
 @media only screen and (max-width: 500px) {
     .how-it-works {
         padding: 20px 40px 26px 40px;
