--- a/src/components/Public/CustomerCare/styles.css
+++ b/src/components/Public/CustomerCare/styles.css
@@ -56,7 +56,34 @@
     text-decoration: underline;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1024px) and (orientation: landscape) {
+    .contact .wrapper {
+        padding: 10px 40px 40px;
+        margin: 0 auto;
+    }
+
+    .contact .page-header {
+        background-color: #fff;
+        position: static;
+        display: block;
+        text-align: center;
+        padding-left: 0;
+        margin-top: 250px;
+    }
+
+    .contact .page-header h1 {
+        color: #C04C9C;
+        padding: 7px 0 0 0;
+        margin-top: 8px;
+        margin-bottom: 0;
+    }
+
+    .contact .push {
+        height: 0;
+    }
+}
+
+@media only screen and (max-width: 768px) and (orientation: portrait) {
     .contact .page-header {
         background-color: #fff;
         position: static;
