--- a/src/components/Public/Intro/styles.css
+++ b/src/components/Public/Intro/styles.css
@@ -83,6 +83,30 @@
     font-weight: 300;
 }
 
+@media only screen and (max-width: 1024px) and (orientation: landscape) {
+    .introduction .heading {
+        color: #fff;
+        font-size: 30px;
+        margin: 0 0 7px 0;
+    }
+
+    .introduction .preamble {
+        float: left;
+        font-size: 17px;
+        margin: 0;
+        font-weight: 300;
+        color: #fff;
+        line-height: 25px;
+        max-width: 670px;
+    }
+
+    .introduction .text-wrapper {
+        padding: 30px 40px 32px 40px;
+        background-color: #C04C9C;
+        overflow: hidden;
+    }
+}
+
 @media only screen and (max-width: 768px) {
     .introduction {
         padding-top: 220px;
