--- a/src/components/Public/Quoteimage/styles.css
+++ b/src/components/Public/Quoteimage/styles.css
@@ -52,6 +52,38 @@
     text-shadow: 2px 2px 5px rgba(0, 0, 0, .7);
 }
 
+@media only screen and (max-width: 1024px) and (orientation: landscape) {
+    .quote-image p:first-child {
+        font-size: 40px;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: 24px auto 0;
+    }
+
+    .quote-image p:nth-child(2) {
+        font-size: 40px;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: 76px auto 0;
+    }
+
+    .quote-image p:nth-child(3) {
+        display: block;
+        right: 12%;
+        font-size: 20px;
+        font-weight: 300;
+        top: 103px;
+        color: #fff;
+        text-shadow: none;
+        margin-left: 0;
+        left: auto;
+    }
+}
+
 @media only screen and (max-width: 768px) {
     .quote-image {
         padding: 20px 0;
