--- a/src/components/Public/Staff/styles.css
+++ b/src/components/Public/Staff/styles.css
@@ -310,6 +310,21 @@
     }
 }
 
+@media only screen and (max-width: 600px) and (orientation: landscape) {
+    .staff .card {
+        display: inline-block;
+        margin: 0 0 0 4%;
+        margin-top: 25px;
+        overflow: hidden;
+        height: 406px;
+        box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.5);
+        border: 8px solid #fff;
+        background-color: #fff;
+        width: 61%;
+    }
+}
+
+
 @media only screen and (max-width: 500px) {
     .staff {
         padding: 5px 40px 20px;
