--- a/src/components/Public/Blog/styles.css
+++ b/src/components/Public/Blog/styles.css
@@ -45,6 +45,12 @@
 @media only screen and (max-width: 1024px) and (orientation: landscape) {
     .blog .blog-list {
         padding: 10px 40px;
+    }
+}
+
+@media only screen and (max-width: 768px) and (orientation: landscape) {
+    .blog .blog-list {
+        padding: 10px 40px;
         margin-top: 0;
     }
 
