--- a/src/components/Public/Footer/styles.css
+++ b/src/components/Public/Footer/styles.css
@@ -110,9 +110,9 @@
 
 @media only screen and (max-width: 1100px) {
     .footer {
-        padding: 10px 40px;
+        padding: 10px 50px;
     }
-    
+
     .footer .col-1 {
         margin-right: 6%
     }
@@ -124,7 +124,7 @@
 
 @media only screen and (max-width: 1150px) {
     .footer {
-        padding: 40px;
+        padding: 50px;
         height: auto;
     }
 
@@ -161,6 +161,12 @@
 @media only screen and (max-width: 950px) {
     .footer .col {
         width: 100%;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .footer {
+        padding: 40px;
     }
 }
 
