--- a/src/components/Public/Intro/styles.css
+++ b/src/components/Public/Intro/styles.css
@@ -129,7 +129,6 @@
     .introduction .heading {
         color: #fff;
         font-size: 30px;
-        text-align: center;
         margin: 0 0 7px 0;
     }
 
@@ -172,9 +171,10 @@
     }
 
     .introduction .heading {
-        font-size: 23px;
+        font-size: 27px;
         line-height: 34px;
         margin-bottom: 12px;
+        text-align: left;
     }
 
     .introduction .intro-button {
