--- a/src/components/Public/PrivacyPolicy/styles.css
+++ b/src/components/Public/PrivacyPolicy/styles.css
@@ -115,7 +115,14 @@
     }
 }
 
-@media only screen and (max-width: 1024px) and (orientation: landscape) {
+@media only screen and (max-width: 1100px) and (orientation: landscape) {
+    .privacy-policy .privacy-wrapper {
+        padding: 10px 40px;
+        max-width: none;
+    }
+}
+
+@media only screen and (max-width: 768px) and (orientation: landscape) {
     .privacy-policy .privacy-wrapper {
         padding: 10px 40px;
         margin: 0;
