--- a/src/components/Public/Checkout/styles.css
+++ b/src/components/Public/Checkout/styles.css
@@ -1111,7 +1111,7 @@ thead tr {
     .checkout table {
         float: none;
         margin-top: 0;
-        width: 100%;
+        width: 100%;
         box-sizing: border-box;
         margin: 9px auto 25px;
     }
