--- a/src/components/Public/Header/styles.css
+++ b/src/components/Public/Header/styles.css
@@ -231,6 +231,10 @@
         height: 190px;
     }
 
+    #topNav {
+        display: block;
+    }
+
     .navigation .menulist {
         //opacity: 0;
         width:200px;
