--- a/src/components/Public/Checkout/styles.css
+++ b/src/components/Public/Checkout/styles.css
@@ -1006,6 +1006,10 @@ thead tr {
         padding-top: 10px !important;
     }
 
+    .header.show.fixed + .checkout {
+        padding-top: 230px;
+    }
+
     .checkout .basket .back > div {
         margin: 0;
         padding: 0;
